--- a/style.css
+++ b/style.css
@@ -21,9 +21,8 @@
 
 .red{
     background-color: red;
-    width: 200px;
+    width: 150px;
     height: 100px;
-    display: inline-block;
 }
 
 .orange{
@@ -31,4 +30,105 @@
     width: 500px;
     height: 400px;
     margin: auto;
+}
+
+.sez{
+    background-color: whitesmoke;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.box-1{
+    background-color: lightgreen;
+    width: 500px;
+    height: 300px;
+}
+
+.box-2{
+    background-color: green;
+    width: 500px;
+    height: 300px;
+}
+
+.sez-gray{
+    background-color: grey;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row-reverse;
+}
+
+.sez-2{
+    background-color: rgb(73, 72, 72);
+    width: 100%;
+    height: 100%;
+}
+
+.bl-1{
+    background-color: blue;
+    width: 1000px;
+    height: 200px;
+    margin:auto
+}
+
+.bl-2{
+    background-color: aqua;
+    width: 1000px;
+    height: 200px;
+    margin: auto;
+}
+
+.bl-3{
+    background-color: rgb(0, 147, 147);
+    width: 1000px;
+    height: 200px;
+    margin: auto;
+}
+
+.foot{
+    width: 100%;
+    height: 100%;
+}
+
+.col-1, .col-2, .col-3, .col-4, .col-5{
+    width: calc(1000px/5);
+    height: 500px;
+
+}
+
+.col-1{
+    background-color: brown;
+}
+
+.col-2{
+    background-color: red;
+}
+
+.col-3{
+    background-color: rgb(117, 0, 0);
+}
+
+.col-4{
+    background-color: rgb(219, 77, 0);
+}
+
+.col-5{
+    background-color: rgb(211, 165, 0);
+}
+
+.foot{
+    background-color: rgb(0, 171, 171);
+    width: 1000px;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.bloc-1, .bloc-2{
+    background-color: blue;
+    width: 200px;
+    height: 200px;
 }
