--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
     height: 300px;
 }
 
-.sez-gray{
+.sez-gray, .foot{
     background-color: grey;
     width: 100%;
     display: flex;
@@ -118,7 +118,7 @@
     background-color: rgb(211, 165, 0);
 }
 
-.foot{
+.cont{
     background-color: rgb(0, 171, 171);
     width: 1000px;
     height: 100%;
