--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
 
 .light-green{
     background-color: lightgreen;
-    width: 1000px;
+    width: 80%;
     height: 100px;
     margin: auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .red{
@@ -27,7 +27,7 @@
 
 .orange{
     background-color: orange;
-    width: 500px;
+    width: 600px;
     height: 400px;
     margin: auto;
 }
@@ -42,13 +42,13 @@
 
 .box-1{
     background-color: lightgreen;
-    width: 500px;
+    width: 40%;
     height: 300px;
 }
 
 .box-2{
     background-color: green;
-    width: 500px;
+    width: 40%;
     height: 300px;
 }
 
@@ -68,21 +68,21 @@
 
 .bl-1{
     background-color: blue;
-    width: 1000px;
+    width: 80%;
     height: 200px;
     margin:auto
 }
 
 .bl-2{
     background-color: aqua;
-    width: 1000px;
+    width: 80%;
     height: 200px;
     margin: auto;
 }
 
 .bl-3{
     background-color: rgb(0, 147, 147);
-    width: 1000px;
+    width: 80%;
     height: 200px;
     margin: auto;
 }
@@ -93,7 +93,7 @@
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5{
-    width: calc(1000px/5);
+    width: calc(80%/5);
     height: 500px;
 
 }
@@ -120,7 +120,7 @@
 
 .cont{
     background-color: rgb(0, 171, 171);
-    width: 1000px;
+    width: 80%;
     height: 100%;
     margin: auto;
     display: flex;
@@ -129,6 +129,6 @@
 
 .bloc-1, .bloc-2{
     background-color: blue;
-    width: 200px;
+    width: 20%;
     height: 200px;
 }
